spotme-auth-svc/overlays/dev/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: ${parameters['appname']}-lb
  labels:
    app: spotme-auth-svc
spec:
  type: LoadBalancer
  selector:
    app: ${parameters['appname']}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
