spotme-auth-svc/overlays/dev/service-patch.yml
apiVersion: v1
kind: Service
metadata:
    name: ${appname}
    annotations:
      strategy.spinnaker.io/recreate: 'true'
spec:
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30201
