spotme-auth-svc/overlays/dev/ingress copy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${parameters['appname']}-ingress-2
  
spec:
  ingressClassName: public
  rules:
    - host: ${parameters['appname']}.${parameters['cluster']}.magus.lab
      http:
        paths:
          - path: /auth-ingress
            pathType: Prefix
            backend:
              service:
                name: spotme-auth-svc
                port:
                  number: 80
