spotme-auth-svc/overlays/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${parameters['appname']}-ingress
spec:
  rules:
    - host: ${parameters['appname']}.dev.mts-local.com
      http:
        paths:
          - path: /auth-ingress
            pathType: Prefix
            backend:
              service:
                name: spotme-auth-svc
                port:
                  number: 80
